--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -17,5 +17,11 @@
     "reporter": "Reporter",
     "cancel": "Cancel",
     "save":"Save",
-    "editticket": "Edit Selected Ticket"
+    "editticket": "Edit Selected Ticket",
+    "all": "All",
+    "editConfirmation": "Are you sure you want to edit this Ticket?",
+    "deleteConfirmation": "Are you sure you want to delete this Ticket?",
+    "saveConfirmation": "Are you sure you want to save this Ticket?",
+    "no":"No",
+    "yes":"Yes"
   }
