removed console logs, !important is removed from css files, added space before { in css files,and removed inline css from template and moved to css files

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,27 +1,28 @@
 {
-    "Title": "Jira Software",
-    "projects": "Projects",
-    "crtbtn": "Create",
-    "allTickets": "All Tickets",
-    "todo": "Todo",
-    "inprogress": "In Progress",
-    "done": "Done",
-    "createissue": "Create Issue",
-    "project": "Project",
-    "status": "Status",
-    "summary": "Summary",
-    "tickettype": "Ticket Type",
-    "story": "Story",
-    "defect": "Defect",
-    "assignee": "Assignee",
-    "reporter": "Reporter",
-    "cancel": "Cancel",
-    "save":"Save",
-    "editticket": "Edit Selected Ticket",
-    "all": "All",
-    "editConfirmation": "Are you sure you want to edit this Ticket?",
-    "deleteConfirmation": "Are you sure you want to delete this Ticket?",
-    "saveConfirmation": "Are you sure you want to save this Ticket?",
-    "no":"No",
-    "yes":"Yes"
-  }
+  "Title": "Jira Software",
+  "projects": "Projects",
+  "crtbtn": "Create",
+  "allTickets": "All Tickets",
+  "todo": "Todo",
+  "inprogress": "In Progress",
+  "done": "Done",
+  "createissue": "Create Issue",
+  "project": "Project",
+  "status": "Status",
+  "summary": "Summary",
+  "tickettype": "Ticket Type",
+  "story": "Story",
+  "defect": "Defect",
+  "assignee": "Assignee",
+  "reporter": "Reporter",
+  "cancel": "Cancel",
+  "save": "Save",
+  "editticket": "Edit Selected Ticket",
+  "all": "All",
+  "editConfirmation": "Are you sure you want to edit this Ticket?",
+  "deleteConfirmation": "Are you sure you want to delete this Ticket?",
+  "saveConfirmation": "Are you sure you want to save this Ticket?",
+  "no": "No",
+  "yes": "Yes",
+  "searchph": "Type to search...."
+}
