--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,27 +1,28 @@
 {
-    "Title": "Software Jira",
-    "projects": "Proyectos",
-    "crtbtn": "Crear",
-    "allTickets": "Todas las entradas",
-    "todo": "Hacer",
-    "inprogress": "En curso",
-    "done": "Hecho",
-    "createissue": "Crear problema",
-    "project": "Proyecto",
-    "status": "Estado",
-    "summary": "Resumen",
-    "tickettype": "Tipo Billete",
-    "story": "Historia",
-    "defect": "defecto",
-    "assignee": "Cesionaria",
-    "reporter": "Reportera",
-    "cancel": "Cancelar",
-    "save":"Ahorrar",
-    "editticket": "Editar ticket seleccionado",
-    "all": "toda",
-    "editConfirmation": "¿Estás seguro de que quieres editar este billete?",
-    "deleteConfirmation": "Estas seguro que quieres borrarlo este Boleto?",
-    "saveConfirmation": "¿Estás segura de que quieres guardar este boleto?",
-    "no":"No",
-    "yes":"Sí"
-  }
+  "Title": "Software Jira",
+  "projects": "Proyectos",
+  "crtbtn": "Crear",
+  "allTickets": "Todas las entradas",
+  "todo": "Hacer",
+  "inprogress": "En curso",
+  "done": "Hecho",
+  "createissue": "Crear problema",
+  "project": "Proyecto",
+  "status": "Estado",
+  "summary": "Resumen",
+  "tickettype": "Tipo Billete",
+  "story": "Historia",
+  "defect": "defecto",
+  "assignee": "Cesionaria",
+  "reporter": "Reportera",
+  "cancel": "Cancelar",
+  "save": "Ahorrar",
+  "editticket": "Editar ticket seleccionado",
+  "all": "toda",
+  "editConfirmation": "¿Estás seguro de que quieres editar este billete?",
+  "deleteConfirmation": "Estas seguro que quieres borrarlo este Boleto?",
+  "saveConfirmation": "¿Estás segura de que quieres guardar este boleto?",
+  "no": "No",
+  "yes": "Sí",
+  "searchph": "Escribe para buscar...."
+}
