--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,27 +1,28 @@
 {
-    "Title": "Logiciel Jira",
-    "projects": "Projets",
-    "crtbtn": "Créer",
-    "allTickets": "Tous les Tickets",
-    "todo": "À faire",
-    "inprogress": "En cours",
-    "done": "Terminé",
-    "createissue": "Créer une tâche",
-    "project": "Projet",
-    "status": "Statut",
-    "summary": "Résumé",
-    "tickettype": "Type de ticket",
-    "story": "histoire",
-    "defect": "défaut",
-    "assignee": "Assigné à",
-    "reporter": "Rapporteur",
-    "cancel": "Annuler",
-    "save":"Sauvegarder",
-    "editticket": "Modifier le billet sélectionné",
-    "all": "toute",
-    "editConfirmation": "Etes-vous sûr de vouloir modifier ce billet?",
-    "deleteConfirmation": "Etes-vous sûr que vous voulez supprimer ce billet?",
-    "saveConfirmation": "Etes-vous sûr de vouloir enregistrer ce ticket?",
-    "no":"Non",
-    "yes":"Oui"
-  }
+  "Title": "Logiciel Jira",
+  "projects": "Projets",
+  "crtbtn": "Créer",
+  "allTickets": "Tous les Tickets",
+  "todo": "À faire",
+  "inprogress": "En cours",
+  "done": "Terminé",
+  "createissue": "Créer une tâche",
+  "project": "Projet",
+  "status": "Statut",
+  "summary": "Résumé",
+  "tickettype": "Type de ticket",
+  "story": "histoire",
+  "defect": "défaut",
+  "assignee": "Assigné à",
+  "reporter": "Rapporteur",
+  "cancel": "Annuler",
+  "save": "Sauvegarder",
+  "editticket": "Modifier le billet sélectionné",
+  "all": "toute",
+  "editConfirmation": "Etes-vous sûr de vouloir modifier ce billet?",
+  "deleteConfirmation": "Etes-vous sûr que vous voulez supprimer ce billet?",
+  "saveConfirmation": "Etes-vous sûr de vouloir enregistrer ce ticket?",
+  "no": "Non",
+  "yes": "Oui",
+  "searchph": "Tapez pour rechercher...."
+}
